# SmartFrame

./: README.md
dithering/: CMakeLists.txt  main.cpp
python/: main.py
python/waveshare_epd/: epd5in65f.py
